Fixed broken css which prevented creating a good minified css file.  Also corrected generic image src instead of specialized logo.

--- a/themes/coolwatertheme/css/base-styles.css
+++ b/themes/coolwatertheme/css/base-styles.css
@@ -154,8 +154,7 @@ div.bodycopy ul, ol {
 	text-decoration: none;
 	padding:0 0 0 40px;
 	_padding:0 0 0 20px;
-/*	background-image: url(../images/exp.png); */
-	background-image: url(../images/HHLogoSm.gif);
+	background-image: url(../images/exp.png); 
 	_background-image:none;
 	background-repeat: no-repeat ;
 
